--- a/.github/workflows/ci-dockerhub.yml
+++ b/.github/workflows/ci-dockerhub.yml
@@ -24,7 +24,7 @@ jobs:
           pip install -r requirements.txt
       
       - name: Run tests
-        run: pytest -q
+        run: pytest -m pytest -q
       
       - name: Docker meta
         id: meta
